--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URI = 'mysql+pymysql://root:admin@localhost:3306/exception_database'
+DATABASE_URL= 'Driver={ODBC Driver 17 for SQL Server};Server=tcp:data-sonic-trail-server.database.windows.net,1433;Database=data-sonic-trail;Uid=sqlroot;Pwd={root@123};Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;'
